[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
antithesis_sdk = { path = "../lib", default-features = false, features = [ "rand_v0_8", "rand_v0_9", "rand_v0_10" ] }
serde_json = "1.0.25"

[dev-dependencies]
rand_v0_8 = { package = "rand", version = "0.8" }
rand_v0_9 = { package = "rand", version = "0.9" }
rand_v0_10 = { package = "rand", version = "0.10" }

[features]
default = ["antithesis_sdk/full"]
